added new files

--- a/index.html
+++ b/index.html
@@ -46,6 +46,13 @@ I  also joined the AltSchool Africa School of Engineering to deepen my technical
 	</ul>
 	
 	</div>
+	<p>Find the schools and courses here 
+     <a href="table.html">Schools and Courses</a>
+
+	</p>
+	<p>
+		Find out more <a href="media.html"> About me</a>
+	</p>
 	
 	<p><a href="#top">Back to Top</a></p>
 	
