--- a/media.html
+++ b/media.html
@@ -9,9 +9,9 @@
     <h2>About Me</h2>
 
         <picture>
-    <source media="(min-width: 1024px)" srcset="images/chiamaka main.png">
-    <source media="(max-width: 1023px)" srcset="images/chiamaka main.png">
-    <img src="images/chiamaka main.png" alt="Portrait of Chiamaka Anyanwu" width="100%">
+    <source media="(min-width: 1024px)" srcset="images/chiamaka-main.png">
+    <source media="(max-width: 1023px)" srcset="images/chiamaka-main.png">
+    <img src="images/chiamaka-main.png" alt="Portrait of Chiamaka Anyanwu" width="100%">
   </picture>
 
 
@@ -25,17 +25,17 @@
         </p>
 
      <picture>
-    <source media="(min-width: 768px)" srcset="images/Chiamaka Anyanwu - Cloud Lead(1).jpg">
-    <img src="images/Chiamaka Anyanwu - Cloud Lead(1).jpg" alt="Chiamaka Anyanwu - GDG Cloud Lead" width="100%">
+    <source media="(min-width: 768px)" srcset="images/Chiamaka.jpg">
+    <img src="images/Chiamaka Anyanwu.jpg" alt="Chiamaka Anyanwu - GDG Cloud Lead" width="100%">
   </picture>
     <p>
-        I served as the lead for Google Developers Group on Capmus Cloud track in Babcock University, where I led initiatives that empowered fellow students through workshops, collaborative projects, and professional development events.
+        I served as the lead for the Google Developers Group on Campus Cloud track at Babcock University, where I led initiatives that empowered fellow students through workshops, collaborative projects, and professional development events.
     </p>
     
     <picture>
     <picture>
-    <source media="(min-width: 768px)" srcset="images/Cloud Track.png">
-    <source media="(min-width: 1024px)" srcset="images/Cloud Track.png">
+    <source media="(min-width: 768px)" srcset="images/Cloud-Track.png">
+    <source media="(min-width: 1024px)" srcset="images/Cloud-Track.png">
     <img src="images/Cloud Track.png" alt="Cloud Track Projects Showcase" width="100%">
   </picture>
     <p>I have also worked in other student leadership positions and volunteering positions as well.</p>
